fix navbar to only collapse when in mobile and align navbar in smaller screen

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -265,12 +265,6 @@ div.textBlock p:last-child {
 /*    border-bottom: 1px dashed #309 !important;*/
 /*}*/
 
-@media (min-width: 990px) {
-    .mr-auto a {
-        font-size: 1.2rem !important;
-    }
-}
-
 /*@media (min-width: 1400px) {*/
 /*    .container {*/
 /*        max-width: 1400px !important;*/
@@ -449,7 +443,7 @@ span.button {
     /*padding-top: 120px;*/
 }
 
-@media (max-width: 990px) {
+@media (max-width: 600px) {
     .navbar {
         background-color: #000000cc !important;
         border-bottom: 1px solid #222 !important;
@@ -699,10 +693,9 @@ img.pc90 {
 /*    background-size: contain;*/
 /*}*/
 
-@media (max-width: 1000px) {
+@media (max-width: 990px) {
     .socialLinks {
-        float: right;
-        margin-top: -5%;
+        display: none;
     }
 }
 
@@ -1467,7 +1460,6 @@ table td {
 .navbar-light .navbar-nav .nav-link,
 .links {
     font-family: Mulish, sans-serif;
-    font-size: 0.8rem !important;
     padding-top: 12px;
     color: white;
     text-decoration: none;
@@ -1475,7 +1467,6 @@ table td {
 
 .links span {
     font-weight: 400;
-    font-size: 1.2vw;
 }
 
 .links.white:hover {
@@ -1512,6 +1503,12 @@ table td {
 
 .mr-auto a {
     font-size: 1.2vw !important;
+}
+
+@media (max-width: 990px) {
+    .mr-auto a {
+        font-size: inherit !important;
+    }
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
